--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,4 +1,5 @@
 .about {
+  pointer-events: auto;
   &__title {
     margin-bottom: $small-spacing;
   }
